card on event and styling